@@ -32,6 +32,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-4930: Skewed Join Breaks On Empty Sampled Input When Key is From Map (nkollar via rohini)
+
 PIG-3417: Job fails when skewed join is done on tuple key (nkollar via rohini)
 
 PIG-5074: Build broken when hadoopversion=20 in branch 0.16 (szita via daijy)
